@@ -1,15 +1,12 @@
 package com.flightstats.hub.spoke;
 
+import com.amazonaws.util.StringUtils;
 import com.flightstats.hub.app.HubProperties;
 import com.flightstats.hub.app.HubServices;
-import com.google.common.io.ByteStreams;
 import com.google.common.util.concurrent.AbstractScheduledService;
-import com.google.inject.Inject;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.io.BufferedInputStream;
-import java.io.InputStream;
 import java.util.concurrent.TimeUnit;
 
 public class SpokeTtlEnforcer {
@@ -17,7 +14,6 @@ public class SpokeTtlEnforcer {
     private final String storagePath;
     private final int ttlMinutes;
 
-    @Inject
     public SpokeTtlEnforcer() {
         this.storagePath = HubProperties.getProperty("spoke.path", "/spoke");
         this.ttlMinutes = HubProperties.getProperty("spoke.ttlMinutes", 60);
@@ -26,21 +22,18 @@ public class SpokeTtlEnforcer {
 
     public void run() {
         try {
-            String command = "find -D tree " + storagePath + " -mmin +" + ttlMinutes + " -delete";
-            logger.debug("running " + command);
-            Process process = Runtime.getRuntime().exec(command);
-            InputStream stream = new BufferedInputStream(process.getInputStream());
-            int waited = process.waitFor();
+            String[] command = {"find", storagePath, "-mmin", "+" + ttlMinutes, "-delete"};
+            logger.debug("running " + StringUtils.join(" ", command));
+            Process process = new ProcessBuilder(command)
+                    .redirectError(ProcessBuilder.Redirect.INHERIT)
+                    .redirectOutput(ProcessBuilder.Redirect.INHERIT)
+                    .start();
+            boolean waited = process.waitFor(1, TimeUnit.MINUTES);
             logger.debug("waited " + waited);
-            if (logger.isTraceEnabled()) {
-                byte[] output = ByteStreams.toByteArray(stream);
-                logger.trace(new String(output));
-            }
         } catch (Exception e) {
             logger.warn("unable to enforce ttl", e);
         }
     }
-
 
     private class SpokeTtlEnforcerService extends AbstractScheduledService {
         @Override
